edit target icons

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             </div>
             <div class="collapse navbar-collapse " id="navbarResponsive">
                 <div></div>
-<a style="color: #3b5998;" href="https://www.facebook.com/albarakah.net" role="button"
+<a style="color: #3b5998;" href="https://www.facebook.com/albarakah.net" role="button" target="_blank"
 ><i class="bi bi-facebook fa-lg social"></i
 ></a>
 
 <!-- Twitter -->
-<a style="color: #55acee;" href="https://twitter.com/albarakahnet" role="button"
+<a style="color: #55acee;" href="https://twitter.com/albarakahnet" role="button" target="_blank"
 ><i class="bi bi-twitter fa-lg social"></i
 ></a>
 
